--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@
 
 .container{
     display:flex;
-    width:100vw;
+    width:100%;
     height:100vh;
 }
 
@@ -39,7 +39,7 @@
 .logo{
     width:100%;
     height:200px;
-    margin-top:200px;
+    margin-top:180px;
     display:flex;
     justify-content: center;
     align-items: center;
@@ -86,7 +86,7 @@
 
 .quote{
 
-    flex:2;
+    min-height:380px;
     background-color: var(--primary-bg-color);
     display:flex;
     flex-direction: column;
@@ -95,6 +95,8 @@
     font-weight: bold;
     padding:0 180px 0 50px;
     line-height: 1.25;
+    flex-shrink: 0;
+    flex-grow: 0;
 
 }
 
@@ -103,11 +105,12 @@
 }
 
 form{
-    flex:2;
     box-shadow: 5px 5px 10px var(--shadow-border);
     background-color: var(--secondary-bg-color);
     z-index:2;
     padding: 0 180px 0 50px;
+    min-height: 380px;
+    flex-shrink: 0;
    
 }
 
